# stock-data-model

./: pyproject.toml  requirements.txt
.github/: cicd.yml
.github/workflows/: cicd.yml
model/: pyproject.toml
model/src/stock/data/model/: alembic.ini  crud.py  database.py  models.py
model/src/stock/data/model/migrations/: env.py
model/src/stock/data/model/migrations/versions/: 1c81dcbae553_core4.py  371ace378bc5_core2.py  7b4dd2fa79cd_init.py  bc6aa2a11adc_core4.py  d8ae2613706b_core5.py  eff716a6930c_core3.py  fc608628c9db_core1.py
model/tests/: test_main.py
src/stock/data/model/: __init__.py  crud.py  schemas.py
src/stock/data/model/migrations/versions/: 72c8bc8d8bc1_core6.py
tests/: test_main.py
