[tool.poetry]
name = "stock.data.model"
version = "0.1.16"
description = "stock.data.model"
authors = ["piroinno <peter.irojah@piroinno.com>"]
readme = "README.md"

packages = [
  { include = "stock", from = "src" }
  { include = "stock/**/*.py", from = "src" }
  {exclude = ["stock/data/model/migrations/*"]},
  {exclude = ["stock/data/model/alembic.ini"]},
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10.2"
greenlet = "^2.0.2"
psycopg2 = "^2.9.5"
SQLAlchemy = "^2.0.5.post1"
Mako = "^1.2.4"
MarkupSafe = "^2.1.2"
typing_extensions = "^4.5.0"
pydantic = "1.10.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]